# s3c

./: Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
src/: app.rs  config.rs  lib.rs  list_model.rs  main.rs  message.rs  s3_ops.rs  ui.rs
src/app/: converters.rs  mod.rs  navigation.rs  state.rs  update.rs
src/app/handlers/: dialogs.rs  forms.rs  input.rs  mod.rs  navigation.rs
src/app/handlers/preview/: file.rs  image.rs  mod.rs
src/handlers/: key_handler.rs  key_to_message.rs  mod.rs
src/menu/: mod.rs
src/models/: config.rs  list.rs  mod.rs
src/models/preview/: file_content.rs  image.rs  mod.rs
src/operations/: app_operations.rs  file_ops.rs  mod.rs  navigation.rs  queue.rs  run.rs  s3.rs
src/operations/preview/: file_loader.rs  image_loader.rs  mod.rs
src/ui/: dialogs.rs  draw.rs  helpers.rs  mod.rs  panels.rs  widgets.rs
src/ui/preview/: file.rs  image.rs  mod.rs
