[package]
name = "s3c"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "s3c"
path = "src/lib.rs"

[[bin]]
name = "s3c"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.50"
aws-sdk-sts = "1.50"
aws-credential-types = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
viuer = "0.7"
image = "0.25"
